--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
         "mongoose" : "~3.8.17",
         "body-parser": "~1.9.0",
         "form-data": "~0.1.4",
-        "formidable": "~1.0.15"
+        "multer": "~0.1.6"
     }
 }
